--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["dioxus", "async", "state", "synchronization"]
 categories = ["gui", "asynchronous"]
 
 [dependencies]
-dioxus-lib = { version = "0.7", default-features = false, features = ["macro", "hooks", "signals"] }
+dioxus-lib = { version = "0.7.0-alpha.0", default-features = false, features = ["macro", "hooks", "signals"] }
 futures-util = "0.3.28"
 instant = { version = "0.1", features = ["wasm-bindgen"] }
 warnings = "0.2.1"
